--- a/.drone.yml
+++ b/.drone.yml
@@ -7,7 +7,9 @@ pipeline:
     password: yogesh12
     repo: registry.learnindialearn.in:5000/mongo-backup
     insecure: true
-    auto_tag: true
+    tags: non-prod
+    when:
+      branch: non-prod
      
   notify:
     image: drillster/drone-email
